<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_title_border"
    android:elevation="4dp"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:paddingTop="10dp">
        <RadioGroup
            android:id="@+id/radioGroupOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                style="@style/CustomRadioButtonStyle"
                android:text="@string/name" />

            <RadioButton
                android:id="@+id/radioButtonPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomRadioButtonStyle"
                android:text="@string/phone_number" />

            <RadioButton
                android:id="@+id/radioButtonAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomRadioButtonStyle"
                android:text="@string/address" />

        </RadioGroup>

        <EditText
            android:id="@+id/searchText"
            android:autofillHints=""
            android:visibility="visible"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_edit_text"
            android:hint="@string/search_by_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="15sp" />


<!--        <ImageButton-->
<!--            android:id="@+id/searchButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center|end"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:background="@drawable/rounded_button_transparent"-->
<!--            android:elevation="4dp"-->
<!--            android:src="@drawable/ic_search" />-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>